tests/e2e/function_call_only_name3.error
Error: syntax error in story at line 4, column 1

4|    a[foo]()
      ^

E0101: Variable `a` has not been defined.
